@@ -2,28 +2,24 @@ package com.myvanitys.api.product.infrastructure.adapter.secondary;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.AssertionsForClassTypes.assertThatThrownBy;
-import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import com.myvanitys.api.product.domain.model.Category;
-import com.myvanitys.api.product.domain.model.Product;
-import com.myvanitys.api.product.domain.model.Review;
-import com.myvanitys.api.product.domain.valueobject.EntityId;
-import com.myvanitys.api.product.infrastructure.exception.DatabaseException;
-import com.myvanitys.api.product.infrastructure.persistence.entity.ProductEntity;
-import com.myvanitys.api.product.infrastructure.persistence.entity.ProductUserEntity;
-import com.myvanitys.api.product.infrastructure.persistence.entity.ReviewEntity;
-import com.myvanitys.api.product.infrastructure.persistence.mapper.ProductMapper;
-import com.myvanitys.api.product.infrastructure.persistence.mapper.ReviewMapper;
-import com.myvanitys.api.product.infrastructure.persistence.repository.JpaProductRepository;
-import com.myvanitys.api.product.infrastructure.persistence.repository.JpaProductUserRepository;
-import com.myvanitys.api.product.infrastructure.persistence.repository.JpaReviewRepository;
-import jakarta.persistence.EntityNotFoundException;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+
+import com.myvanitys.api.product.domain.model.Review;
+import com.myvanitys.api.product.domain.valueobject.EntityId;
+import com.myvanitys.api.product.domain.valueobject.ReviewDetails;
+import com.myvanitys.api.product.infrastructure.exception.DatabaseException;
+import com.myvanitys.api.product.infrastructure.persistence.entity.ProductUserEntity;
+import com.myvanitys.api.product.infrastructure.persistence.entity.ReviewEntity;
+import com.myvanitys.api.product.infrastructure.persistence.mapper.ReviewMapper;
+import com.myvanitys.api.product.infrastructure.persistence.repository.JpaProductUserRepository;
+import com.myvanitys.api.product.infrastructure.persistence.repository.JpaReviewRepository;
+import jakarta.persistence.EntityNotFoundException;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -42,13 +38,7 @@ class ReviewRepositoryAdapterTest {
   private JpaProductUserRepository jpaProductUserRepository;
 
   @Mock
-  private JpaProductRepository jpaProductRepository;
-
-  @Mock
   private ReviewMapper reviewMapper;
-
-  @Mock
-  private ProductMapper productMapper;
 
   @InjectMocks
   private ReviewRepositoryAdapter target;
@@ -64,8 +54,7 @@ class ReviewRepositoryAdapterTest {
       final UUID reviewId = UUID.randomUUID();
       final UUID productUserId = UUID.randomUUID();
 
-      final EntityId productEntityId = new EntityId(productId);
-      final EntityId userEntityId = new EntityId(userId);
+      final EntityId productUserEntityId = new EntityId(productUserId);
       final EntityId reviewEntityId = new EntityId(reviewId);
 
       final ProductUserEntity productUserEntity = ProductUserEntity.builder()
@@ -73,27 +62,25 @@ class ReviewRepositoryAdapterTest {
           .productId(productId)
           .userId(userId)
           .build();
-      
-      final Review review = new Review(
-          reviewEntityId,
-          userEntityId,
-          productEntityId,
-          5,
-          "Great product"
-      );
-      
+
+      final ReviewDetails reviewDetails = ReviewDetails.create(5, "Great product");
+
+      final Review review = Review.createWithExistingId(reviewEntityId, productUserEntityId, reviewDetails);
+
       final ReviewEntity reviewEntity = ReviewEntity.builder()
           .reviewId(reviewId)
           .rating(5)
           .comment("Great product")
-          .productUserEntity(productUserEntity)
+          .productUserId(productUserId)
           .build();
 
-      when(jpaProductUserRepository.findByProductIdAndUserId(productId, userId))
+      // Configurar el mock para findById de productUserId
+      when(jpaProductUserRepository.findById(productUserId))
           .thenReturn(Optional.of(productUserEntity));
+
       when(reviewMapper.toEntity(review)).thenReturn(reviewEntity);
       when(jpaReviewRepository.save(reviewEntity)).thenReturn(reviewEntity);
-      when(reviewMapper.toDomain(any(ReviewEntity.class), any(EntityId.class))).thenReturn(review);
+      when(reviewMapper.toDomain(reviewEntity, productUserEntityId)).thenReturn(review);
 
       // Act
       final Review result = target.save(review);
@@ -106,20 +93,19 @@ class ReviewRepositoryAdapterTest {
     @Test
     void when_savingReviewThrowsDataAccessException_then_throwDatabaseException() {
       // Arrange
-      final UUID productId = UUID.randomUUID();
-      final UUID userId = UUID.randomUUID();
       final UUID reviewId = UUID.randomUUID();
+      final UUID productUserId = UUID.randomUUID();
 
-      final Review review = new Review(
-          new EntityId(reviewId),
-          new EntityId(userId),
-          new EntityId(productId),
-          5,
-          "Great product"
-      );
+      final EntityId productUserEntityId = new EntityId(productUserId);
+      final EntityId reviewEntityId = new EntityId(reviewId);
 
-      when(jpaProductUserRepository.findByProductIdAndUserId(any(), any()))
-          .thenThrow(new DataAccessException("Test exception") {});
+      final ReviewDetails reviewDetails = ReviewDetails.create(5, "Great product");
+
+      final Review review = Review.createWithExistingId(reviewEntityId, productUserEntityId, reviewDetails);
+
+      when(jpaProductUserRepository.findById(productUserId))
+          .thenThrow(new DataAccessException("Test exception") {
+          });
 
       // Act & Assert
       assertThatThrownBy(() -> target.save(review))
@@ -130,25 +116,23 @@ class ReviewRepositoryAdapterTest {
     @Test
     void when_productUserRelationNotFound_then_throwEntityNotFoundException() {
       // Arrange
-      final UUID productId = UUID.randomUUID();
-      final UUID userId = UUID.randomUUID();
       final UUID reviewId = UUID.randomUUID();
+      final UUID productUserId = UUID.randomUUID();
 
-      final Review review = new Review(
-          new EntityId(reviewId),
-          new EntityId(userId),
-          new EntityId(productId),
-          5,
-          "Great product"
-      );
+      final EntityId productUserEntityId = new EntityId(productUserId);
+      final EntityId reviewEntityId = new EntityId(reviewId);
 
-      when(jpaProductUserRepository.findByProductIdAndUserId(any(), any()))
+      final ReviewDetails reviewDetails = ReviewDetails.create(5, "Great product");
+
+      final Review review = Review.createWithExistingId(reviewEntityId, productUserEntityId, reviewDetails);
+
+      when(jpaProductUserRepository.findById(productUserId))
           .thenReturn(Optional.empty());
 
       // Act & Assert
       assertThatThrownBy(() -> target.save(review))
           .isInstanceOf(EntityNotFoundException.class)
-          .hasMessageContaining("Product-User relation not found");
+          .hasMessageContaining("ProductUser relation not found for review");
     }
   }
 
@@ -159,46 +143,39 @@ class ReviewRepositoryAdapterTest {
     void when_reviewExists_then_returnReview() {
       // Arrange
       final UUID reviewId = UUID.randomUUID();
-      final UUID productId = UUID.randomUUID();
       final UUID productUserId = UUID.randomUUID();
 
-      final ProductUserEntity productUserEntity = ProductUserEntity.builder()
-          .productUserId(productUserId)
-          .productId(productId)
-          .userId(UUID.randomUUID())
-          .build();
+      final EntityId productUserEntityId = new EntityId(productUserId);
+      final EntityId reviewEntityId = new EntityId(reviewId);
 
       final ReviewEntity reviewEntity = ReviewEntity.builder()
           .reviewId(reviewId)
           .rating(4)
           .comment("Good product")
-          .productUserEntity(productUserEntity)
+          .productUserId(productUserId)
           .build();
 
-      final ProductEntity productEntity = ProductEntity.builder()
-          .productId(productId)
-          .name("Test Product")
-          .brand("Test Brand")
+      final ProductUserEntity productUserEntity = ProductUserEntity.builder()
+          .productUserId(productUserId)
+          .productId(UUID.randomUUID())
+          .userId(UUID.randomUUID())
           .build();
 
-      final Review expectedReview = new Review(
-          new EntityId(reviewId),
-          new EntityId(UUID.randomUUID()),
-          new EntityId(productUserId),
-          4,
-          "Good product"
-      );
+      final ReviewDetails reviewDetails = ReviewDetails.create(5, "Great product");
+
+      final Review expectedReview = Review.createWithExistingId(reviewEntityId, productUserEntityId, reviewDetails);
 
       when(jpaReviewRepository.findById(reviewId)).thenReturn(Optional.of(reviewEntity));
-      when(jpaProductRepository.findById(productId)).thenReturn(Optional.of(productEntity));
-      when(reviewMapper.toDomain(any(), any())).thenReturn(expectedReview);
+      when(jpaProductUserRepository.findById(productUserId)).thenReturn(Optional.of(productUserEntity));
+      when(reviewMapper.toDomain(reviewEntity, productUserEntityId)).thenReturn(expectedReview);
 
       // Act
       final Optional<Review> result = target.findById(new EntityId(reviewId));
 
       // Assert
-      assertThat(result).isPresent();
-      assertThat(result.get()).isEqualTo(expectedReview);
+      assertThat(result)
+          .isPresent()
+          .contains(expectedReview);
     }
 
     @Test
@@ -221,7 +198,8 @@ class ReviewRepositoryAdapterTest {
       final UUID reviewId = UUID.randomUUID();
 
       when(jpaReviewRepository.findById(reviewId))
-          .thenThrow(new DataAccessException("Test exception") {});
+          .thenThrow(new DataAccessException("Test exception") {
+          });
 
       // Act & Assert
       assertThatThrownBy(() -> target.findById(new EntityId(reviewId)))
@@ -250,7 +228,8 @@ class ReviewRepositoryAdapterTest {
       // Arrange
       final UUID reviewId = UUID.randomUUID();
 
-      doThrow(new DataAccessException("Test exception") {})
+      doThrow(new DataAccessException("Test exception") {
+      })
           .when(jpaReviewRepository).deleteById(reviewId);
 
       // Act & Assert
@@ -267,61 +246,65 @@ class ReviewRepositoryAdapterTest {
     void when_reviewsExist_then_returnReviewList() {
       // Arrange
       final UUID productId = UUID.randomUUID();
+      final UUID reviewId = UUID.randomUUID();
       final UUID productUserId = UUID.randomUUID();
 
-      final ReviewEntity reviewEntity1 = ReviewEntity.builder()
-          .reviewId(UUID.randomUUID())
+      final EntityId productUserEntityId = new EntityId(productUserId);
+      final EntityId reviewEntityId = new EntityId(reviewId);
+
+      final ProductUserEntity productUserEntity = ProductUserEntity.builder()
+          .productUserId(productUserId)
+          .productId(productId)
+          .userId(UUID.randomUUID())
+          .build();
+
+      final ReviewEntity reviewEntity = ReviewEntity.builder()
+          .reviewId(reviewId)
           .rating(4)
           .comment("Good product")
-          .productUserEntity(ProductUserEntity.builder()
-              .productUserId(productUserId)
-              .productId(productId)
-              .build())
+          .productUserId(productUserId)
           .build();
 
-      final ProductEntity productEntity = ProductEntity.builder()
-          .productId(productId)
-          .name("Test Product")
-          .build();
+      final ReviewDetails reviewDetails = ReviewDetails.create(5, "Great product");
+      final Review review = Review.createWithExistingId(reviewEntityId, productUserEntityId, reviewDetails);
 
-      final Product product = new Product(
-          new EntityId(productId),
-          "Test Product",
-          "Test Brand",
-          new Category(new EntityId(UUID.randomUUID()), "Test Category"),
-          "#FFFFFF");
+      // Configurar para encontrar productUserEntities
+      when(jpaProductUserRepository.findByProductId(productId))
+          .thenReturn(List.of(productUserEntity));
 
-      final Review review = new Review(
-          new EntityId(UUID.randomUUID()),
-          new EntityId(UUID.randomUUID()),
-          new EntityId(productUserId),
-          4,
-          "Good product"
-      );
+      // Configurar para encontrar reviews
+      when(jpaReviewRepository.findByProductUserId(productUserId))
+          .thenReturn(List.of(reviewEntity));
 
-      when(jpaReviewRepository.findByProductUserEntityProductId(productId))
-          .thenReturn(List.of(reviewEntity1));
-      when(jpaProductRepository.findById(productId))
-          .thenReturn(Optional.of(productEntity));
-      when(productMapper.toDomain(productEntity))
-          .thenReturn(product);
-      when(reviewMapper.toDomain(any(), any()))
-          .thenReturn(review);
+      // Configurar el mapper
+      when(reviewMapper.toDomain(reviewEntity, productUserEntityId)).thenReturn(review);
 
       // Act
       final List<Review> result = target.findByProductId(new EntityId(productId));
 
       // Assert
       assertThat(result).hasSize(1);
-      assertThat(result.get(0)).isEqualTo(review);
+      assertThat(result.getFirst()).isEqualTo(review);
     }
 
     @Test
     void when_noReviewsExist_then_returnEmptyList() {
       // Arrange
       final UUID productId = UUID.randomUUID();
+      final UUID productUserId = UUID.randomUUID();
 
-      when(jpaReviewRepository.findByProductUserEntityProductId(productId))
+      final ProductUserEntity productUserEntity = ProductUserEntity.builder()
+          .productUserId(productUserId)
+          .productId(productId)
+          .userId(UUID.randomUUID())
+          .build();
+
+      // Configurar para encontrar productUserEntities
+      when(jpaProductUserRepository.findByProductId(productId))
+          .thenReturn(List.of(productUserEntity));
+
+      // Configurar para encontrar NO reviews
+      when(jpaReviewRepository.findByProductUserId(productUserId))
           .thenReturn(List.of());
 
       // Act
@@ -341,6 +324,10 @@ class ReviewRepositoryAdapterTest {
       final UUID userId = UUID.randomUUID();
       final UUID productId = UUID.randomUUID();
       final UUID productUserId = UUID.randomUUID();
+      final UUID reviewId = UUID.randomUUID();
+
+      final EntityId productUserEntityId = new EntityId(productUserId);
+      final EntityId reviewEntityId = new EntityId(reviewId);
 
       final ProductUserEntity productUserEntity = ProductUserEntity.builder()
           .productUserId(productUserId)
@@ -349,46 +336,52 @@ class ReviewRepositoryAdapterTest {
           .build();
 
       final ReviewEntity reviewEntity = ReviewEntity.builder()
-          .reviewId(UUID.randomUUID())
+          .reviewId(reviewId)
           .rating(3)
           .comment("Average product")
-          .productUserEntity(productUserEntity)
+          .productUserId(productUserId)
           .build();
 
-      final ProductEntity productEntity = ProductEntity.builder()
-          .productId(productId)
-          .name("Test Product")
-          .build();
+      final ReviewDetails reviewDetails = ReviewDetails.create(5, "Great product");
+      final Review review = Review.createWithExistingId(reviewEntityId, productUserEntityId, reviewDetails);
 
-      final Review review = new Review(
-          new EntityId(reviewEntity.getReviewId()),
-          new EntityId(userId),
-          new EntityId(productUserId),
-          3,
-          "Average product"
-      );
+      // Configurar para encontrar productUserEntities
+      when(jpaProductUserRepository.findByUserId(userId))
+          .thenReturn(List.of(productUserEntity));
 
-      when(jpaReviewRepository.findByProductUserEntityUserId(userId))
+      // Configurar para encontrar reviews
+      when(jpaReviewRepository.findByProductUserId(productUserId))
           .thenReturn(List.of(reviewEntity));
-      when(jpaProductRepository.findById(productId))
-          .thenReturn(Optional.of(productEntity));
-      when(reviewMapper.toDomain(any(), any()))
-          .thenReturn(review);
+
+      // Configurar el mapper
+      when(reviewMapper.toDomain(reviewEntity, productUserEntityId)).thenReturn(review);
 
       // Act
       final List<Review> result = target.findByUserId(new EntityId(userId));
 
       // Assert
       assertThat(result).hasSize(1);
-      assertThat(result.get(0)).isEqualTo(review);
+      assertThat(result.getFirst()).isEqualTo(review);
     }
 
     @Test
     void when_noReviewsExist_then_returnEmptyList() {
       // Arrange
       final UUID userId = UUID.randomUUID();
+      final UUID productUserId = UUID.randomUUID();
 
-      when(jpaReviewRepository.findByProductUserEntityUserId(userId))
+      final ProductUserEntity productUserEntity = ProductUserEntity.builder()
+          .productUserId(productUserId)
+          .productId(UUID.randomUUID())
+          .userId(userId)
+          .build();
+
+      // Configurar para encontrar productUserEntities
+      when(jpaProductUserRepository.findByUserId(userId))
+          .thenReturn(List.of(productUserEntity));
+
+      // Configurar para encontrar NO reviews
+      when(jpaReviewRepository.findByProductUserId(productUserId))
           .thenReturn(List.of());
 
       // Act
@@ -403,38 +396,76 @@ class ReviewRepositoryAdapterTest {
   class ExistsByReviewIdAndUserId {
 
     @Test
-    void when_reviewBelongsToUser_then_returnTrue() {
+    void when_reviewExistsForUser_then_returnTrue() {
       // Arrange
       final UUID reviewId = UUID.randomUUID();
       final UUID userId = UUID.randomUUID();
+      final UUID productUserId = UUID.randomUUID();
 
-      when(jpaReviewRepository.existsByReviewIdAndProductUserEntityUserId(reviewId, userId))
-          .thenReturn(true);
+      final ReviewEntity reviewEntity = ReviewEntity.builder()
+          .reviewId(reviewId)
+          .rating(3)
+          .comment("Average product")
+          .productUserId(productUserId)
+          .build();
+
+      final ProductUserEntity productUserEntity = ProductUserEntity.builder()
+          .productUserId(productUserId)
+          .productId(UUID.randomUUID())
+          .userId(userId)
+          .build();
+
+      when(jpaReviewRepository.findById(reviewId)).thenReturn(Optional.of(reviewEntity));
+      when(jpaProductUserRepository.findById(productUserId)).thenReturn(Optional.of(productUserEntity));
 
       // Act
-      final boolean result = target.existsByReviewIdAndUserId(
-          new EntityId(reviewId),
-          new EntityId(userId)
-      );
+      boolean result = target.existsByReviewIdAndUserId(new EntityId(reviewId), new EntityId(userId));
 
       // Assert
       assertThat(result).isTrue();
     }
 
     @Test
-    void when_reviewDoesNotBelongToUser_then_returnFalse() {
+    void when_reviewDoesNotExist_then_returnFalse() {
       // Arrange
       final UUID reviewId = UUID.randomUUID();
       final UUID userId = UUID.randomUUID();
 
-      when(jpaReviewRepository.existsByReviewIdAndProductUserEntityUserId(reviewId, userId))
-          .thenReturn(false);
+      when(jpaReviewRepository.findById(reviewId)).thenReturn(Optional.empty());
 
       // Act
-      final boolean result = target.existsByReviewIdAndUserId(
-          new EntityId(reviewId),
-          new EntityId(userId)
-      );
+      boolean result = target.existsByReviewIdAndUserId(new EntityId(reviewId), new EntityId(userId));
+
+      // Assert
+      assertThat(result).isFalse();
+    }
+
+    @Test
+    void when_productUserRelationDoesNotBelongToUser_then_returnFalse() {
+      // Arrange
+      final UUID reviewId = UUID.randomUUID();
+      final UUID userId = UUID.randomUUID();
+      final UUID anotherUserId = UUID.randomUUID();
+      final UUID productUserId = UUID.randomUUID();
+
+      final ReviewEntity reviewEntity = ReviewEntity.builder()
+          .reviewId(reviewId)
+          .rating(3)
+          .comment("Average product")
+          .productUserId(productUserId)
+          .build();
+
+      final ProductUserEntity productUserEntity = ProductUserEntity.builder()
+          .productUserId(productUserId)
+          .productId(UUID.randomUUID())
+          .userId(anotherUserId)  // Diferente usuario al solicitado
+          .build();
+
+      when(jpaReviewRepository.findById(reviewId)).thenReturn(Optional.of(reviewEntity));
+      when(jpaProductUserRepository.findById(productUserId)).thenReturn(Optional.of(productUserEntity));
+
+      // Act
+      boolean result = target.existsByReviewIdAndUserId(new EntityId(reviewId), new EntityId(userId));
 
       // Assert
       assertThat(result).isFalse();
